skaha-k8s-config/keel-dev/cavern/ingress/cavern-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cavern-ingress
  namespace: skaha-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /cavern/$2
    nginx.ingress.kubernetes.io/proxy-body-size: 100g
spec:
  rules:
  - host: rc-uv.canfar.net
    http:
      paths:
      - path: /cavern(/|$)(.*)
        backend:
          serviceName: cavern-tomcat-svc
          servicePort: 8080
